# nixos-anywhere

./: #.html  .attr-0l2nkwhif96f51f4amnlf414lhl4rv9vh8iffyp431v6s28gsr90  .gitignore  .mergify.yml  404.html  CONTRIBUTING.md  LICENSE  README.md  book.toml  bors.toml  cli.html  env-vars  flake-module.nix  flake.nix  howtos.html  index.html  installation.html  introduction.html  nixos-anywhere-pxe.py  nixos-remote  nixos-remote.nix  package.nix  print.html  pyproject.toml  quickstart.html  reference.html  requirements.html  searcher-c2a407aa.js  searchindex-87286925.js  searchindex.js  searchindex.json  supportmatrix.html  test-ipxe-vm.sh  toc-d711495f.js  toc.html  toc.js  treefmt.nix
.github/: dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: gh-pages.yml  update-flake-lock.yml
docs/: INDEX.md  Reference.md  SUMMARY.md  book.toml  cli.md  default.nix  flake-module.nix  how_to.md  howtos.md  installation.md  introduction.md  quickstart.md  reference.md  requirements.md  supportmatrix.md
docs/howtos/: INDEX.md  custom-kexec.md  disko-modes.md  extra-files.md  ipv6.md  limited-ram.md  nix-path.md  no-os.md  secrets.md  terraform.md  use-without-flakes.md
howtos/: INDEX.html  custom-kexec.html  ipv6.html  nix-path.html  no-os.html  secrets.html  terraform.html  use-without-flakes.html
scripts/: create-release.sh
src/: default.nix  flake-module.nix  get-facts.sh  nixos-anywhere.sh  nixos-remote.sh
src/nixos_anywhere_pxe/: __init__.py  default.nix
terraform/: .envrc  .terraform-docs.yml  README.md  all-in-one.md  flake-module.nix  install.md  nix-build.md  nixos-rebuild.md  shell.nix  update-docs.sh
terraform/all-in-one/: main.tf  variables.tf
terraform/install/: main.tf  providers.tf  run-nixos-anywhere.sh  variables.tf
terraform/nix-build/: main.tf  nix-build.sh  variables.tf
terraform/nixos-rebuild/: deploy.sh  main.tf  variables.tf
terraform/tests/: README.md  digitalocean-deployment.tftest.hcl  hcloud-deployment.tftest.hcl  main.tf  nix-build-special-args.tftest.hcl  nixos-anywhere.tftest.hcl  terraform.tfvars.example
terraform/tests/digitalocean/: main.tf
terraform/tests/hcloud/: main.tf
tests/: default.nix  flake-module.nix  from-nixos-build-on-remote.nix  from-nixos-generate-config.nix  from-nixos-installer-with-sudo.nix  from-nixos-separated-phases.nix  from-nixos-with-sudo.nix  from-nixos.nix  linux-kexec-test.nix  ubuntu-kexec-test.nix
tests/lib/: test-base.nix
tests/modules/: installed.nix  installer.nix  system-to-install.nix
tests/modules/ssh-keys/: ssh.pub
tests/ssh-keys/: ssh
tests/terraform/: .gitignore  flake.lock.nix  flake.nix  go.mod  go.sum  terraform_basic_example_test.go
tests/terraform/examples/qemu/: cloud_init.cfg.tftpl  default.nix  deploy.tf  main.tf  output.tf  provider.tf
treefmt/: flake-module.nix
